[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipykernel = "^6.9.2"
numpy = "^1.22.3"
tensorflow = "^2.8.0"
keras = "^2.8.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
